<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.job4j</groupId>
    <packaging>jar</packaging>
    <artifactId>job4j_design</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>        
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.0</version>
            <scope>test</scope>
        </dependency>
	<dependency>
    	    <groupId>log4j</groupId>
    	    <artifactId>log4j</artifactId>
    	    <version>1.2.17</version>
	</dependency>
	<dependency>
    	    <groupId>org.slf4j</groupId>
    	    <artifactId>slf4j-log4j12</artifactId>
    	    <version>1.7.30</version>
	</dependency>
	<dependency>
    	    <groupId>com.google.code.gson</groupId>
    	    <artifactId>gson</artifactId>
    	    <version>2.11.0</version>
	</dependency>
   	 <dependency>
    	    <groupId>jakarta.xml.bind</groupId>
      	    <artifactId>jakarta.xml.bind-api</artifactId>
      	    <version>4.0.2</version>
   	 </dependency>
    	 <dependency>
    	      <groupId>jakarta.activation</groupId>
    	      <artifactId>jakarta.activation-api</artifactId>
       	      <version>2.1.3</version>
    	 </dependency>
  	 <dependency>
      	      <groupId>org.glassfish.jaxb</groupId>
      	      <artifactId>jaxb-runtime</artifactId>
      	      <version>4.0.5</version>
    	</dependency>
	<dependency>
   	      <groupId>org.json</groupId>
    	      <artifactId>json</artifactId>
    	      <version>20240303</version>
	</dependency>
	<dependency>
   	      <groupId>org.postgresql</groupId>
    	      <artifactId>postgresql</artifactId>
    	      <version>42.7.3</version>
	</dependency>
    	</dependencies>

    <build>
        <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.3.0</version>
              <configuration>
                <skipTests>false</skipTests>
              </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>                    
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.17.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>